# rs-retryablehttp

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
examples/: readme_basic.rs  readme_custom_policy.rs  readme_error_handling.rs
src/: client.rs  error.rs  lib.rs  policy.rs
tests/: integration_test.rs
